--- a/content/index.html
+++ b/content/index.html
@@ -3,6 +3,7 @@
         <title>Deadline через неделю</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="title" content="Я должен успеть к Deadline">
+        <meta name="title" content="Я должен успеть к Deadline" v0.3>
         <meta name="author" content="Sorokin IO">
         <meta name="description" content="My bucket with cat">
     </head>
